results/SVCOMP/4-shot/log-exceptions18-2024_03_18_15_37_42.txt
class A extends RuntimeException {}

class B extends A {}

public class exception18 {
  //@ requires true;
  //@ ensures (\result ==> (\exists A e; true; e instanceof A));
  private static void foo() {
    A a = new A();
    throw a;
  }

  //@ requires \typeof(args) == \type(String[]);
  //@ ensures true;
  public static void main(String[] args) {
    try {
      foo();
      assert false;
    } catch (B e) {
      assert false;
    } catch (A e) {
      // expected here
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
/home/max/Documents/JMLGPT/tmp/exceptions18.java:7: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\result ==> (\exists A e; true; e instanceof A));
                ^
2 errors

